--- a/trunk/TODO
+++ b/trunk/TODO
@@ -5,6 +5,4 @@ $Id$
 
 
 - find solution which does not require System.map
-- write Linux patch which makes /dev/kmem and /dev/mem support
-  configurable - also mind the iopl/dma hole; submit this patch to
-  LKML
+- write Linux patch for the iopl/dma hole
