--- a/trunk/README
+++ b/trunk/README
@@ -62,6 +62,7 @@ Run the following command:
 
  jammod -m /boot/System.map samples/test.ko
  jammod -m /boot/System.map samples/param.ko param=0x0815affe
+ jammod -m /boot/System.map samples/capall.ko pid=$$
 
 Be careful, if you use the wrong System.map, the machine will crash!
 
@@ -73,6 +74,26 @@ undefined.
 However, the features of the module are present. E.g. if you load
 romfs.ko, the ROM file system will appear in /proc/filesystems. Try
 this with a LKM root kit.
+
+
+The capall.ko sample module
+---------------------------
+
+Restores capabilities. I wrote something similar when I wanted to
+enable capabilities on a 2.4 kernel without reboot. It gives the
+parent process all capabilities and removes the system cap bound
+(/proc/sys/kernel/cap-bound).
+
+Normally, you lower the cap bound to remove features from the kernel,
+which are then accessible neither by you, nor by an attacker. The
+process is documented as irreversible until you reboot. "Irreversible"
+is not so irreversible as it sounds - if you have full access to the
+kernel, you can do anything, even raise the cap bound, which is not
+more than one variable assigment.
+
+Got another idea which kernel variable would be nice to tweak while it
+runs? Or something else? Try it, it's easy. Oh, and never forget to
+back up your hard disk before.
 
 
 Why?
