--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,11 +1,6 @@
-jammod (1.0+svn) unstable; urgency=low
+v1.1 - not yet released
+  - initialize local variables correctly, fixes compiler warnings
 
-  * initialize local variables correctly, fixes compiler warnings
 
- --
-
-jammod (1.0) unstable; urgency=low
-
-  * first release
-
- -- Max Kellermann <max@duempel.org>  Sat, 17 Jan 2004 17:05:05 +0100
+v1.0 - 17 Jan 2004
+  - first release
