--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -2,6 +2,7 @@ v1.1 - not yet released
   - initialize local variables correctly, fixes compiler warnings
   - fixed printf warning due to size_t parameter        
   - use constant pointers whenever possible in the linker code
+  - reuse code from linux/arch/i386/kernel/module.c for relocation
 
 
 v1.0 - 17 Jan 2004
